--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <header>
+        <img src="" alt="" class="logo">
+        <div class="links">
+            <a href=""></a>
+            <a href=""></a>
+        </div>
+    </header>
     <div class="container">
         <h1>Budget Tracker</h1>
 
