--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Budget & Finance Tracker | Bingus Wallet</title>
     <link rel="stylesheet" href="styles.css">
+
+    <!-- Firebase SDK -->
+    <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-auth.js"></script>
 </head>
 <body>
     <header>
@@ -67,9 +71,9 @@
         </div>
         <h3>Future Value: $<span id="fvResult">0</span></h3>
     </div>
-    
+
     <script src="script.js"></script>
-    
+
     <footer>
         Copyright 2025 Bingus Wallet
         <div class="social">
@@ -78,5 +82,42 @@
             <img src="" alt="">
         </div>
     </footer>
+
+    <script>
+        // Firebase configuration
+        const firebaseConfig = {
+          apiKey: "AIzaSyCEuZH9Ctva_A2XsZjbhyy2We8XwIpabo8",
+          authDomain: "bingus-wallet.firebaseapp.com",
+          projectId: "bingus-wallet",
+          storageBucket: "bingus-wallet.firebasestorage.app",
+          messagingSenderId: "183867183994",
+          appId: "1:183867183994:web:ce75da09e4cd0195d17cc3",
+          measurementId: "G-GTL7RDRW4T"
+        };
+        };
+
+        const app = firebase.initializeApp(firebaseConfig);
+        const auth = firebase.auth();
+
+        // Check if user is authenticated on page load
+        firebase.auth().onAuthStateChanged((user) => {
+            if (!user) {
+                window.location.href = "/auth-handler.html"; // Redirect to login page if not authenticated
+            } else {
+                console.log("User authenticated:", user);
+            }
+        });
+
+        // Sign out function
+        function signOut() {
+            firebase.auth().signOut()
+                .then(() => {
+                    window.location.href = "/auth-handler.html"; // Redirect to login page after sign out
+                })
+                .catch((error) => {
+                    console.error("Error during sign out:", error);
+                });
+        }
+    </script>
 </body>
 </html>
