--- a/tip-trick.html
+++ b/tip-trick.html
@@ -24,9 +24,9 @@
 
         <button class="accordion">💰 Cheap Date Ideas</button>
         <div class="panel">
-            <a href="#">🎥 Free Movie Nights</a>
-            <a href="#">🌲 Outdoor Adventures</a>
-            <a href="#">🍕 DIY Pizza Night</a>
+            <a href="https://www.byui.edu/calendar/performing-visual-arts">🎥 Free Movie Nights</a>
+            <a href="https://www.tripadvisor.com/Attractions-g35583-Activities-Rexburg_Idaho.html">🌲 Outdoor Adventures</a>
+            <a href="https://www.allrecipes.com/recipe/20171/quick-and-easy-pizza-crust/">🍕 DIY Pizza Night</a>
         </div>
 
         <button class="accordion">💵 Extra Cash Opportunities</button>
@@ -38,9 +38,9 @@
 
         <button class="accordion">📈 Money-Saving & Investing</button>
         <div class="panel">
-            <a href="#">📊 Best Budgeting Apps</a>
-            <a href="#">📉 How to Start Investing</a>
-            <a href="#">💳 Credit Card Cashback Tips</a>
+            <a href="https://money.usnews.com/money/personal-finance/saving-and-budgeting/articles/simple-and-free-budgeting-tools">📊 Best Budgeting Apps</a>
+            <a href="https://www.investopedia.com/articles/basics/11/3-s-simple-investing.asp">📉 How to Start Investing</a>
+            <a href="https://www.nerdwallet.com/article/credit-cards/make-most-rewards-credit-cards">💳 Credit Card Cashback Tips</a>
         </div>
     </div>
 
