--- a/auth-handler.html
+++ b/auth-handler.html
@@ -1,40 +1,25 @@
-<!-- auth-handler.html -->
+<!DOCTYPE html>
 <html>
-  <head>
-    <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-auth.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-firestore.js"></script>
-  </head>
-  <body>
-    <button onclick="signInWithGoogle()">Sign In with Google</button>
-    
-    <script>
-      const firebaseConfig = {
-        apiKey: "AIzaSyCEuZH9Ctva_A2XsZjbhyy2We8XwIpabo8",
-      authDomain: "bingus-wallet.firebaseapp.com",
-      projectId: "bingus-wallet",
-      storageBucket: "bingus-wallet.firebasestorage.app",
-      messagingSenderId: "183867183994",
-      appId: "1:183867183994:web:ce75da09e4cd0195d17cc3",
-      measurementId: "G-GTL7RDRW4T",
-      };
-        // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+<head>
+    <title>Auth Handler</title>
+    <script type="module">
+        import { auth, provider, signInWithPopup } from "./firebase-config.js";
 
-      const app = firebase.initializeApp(firebaseConfig);
-      const auth = firebase.auth();
-      const provider = new firebase.auth.GoogleAuthProvider();
+        function signInWithGoogle() {
+            signInWithPopup(auth, provider)
+                .then((result) => {
+                    console.log("User logged in:", result.user);
+                    window.location.href = "index.html"; // Redirect to home
+                })
+                .catch((error) => {
+                    console.error("Error during login:", error);
+                });
+        }
 
-      function signInWithGoogle() {
-        firebase.auth().signInWithPopup(provider)
-          .then((result) => {
-            const user = result.user;
-            console.log("User logged in:", user);
-            window.location.href = "/index.html"; // Redirect to main page after login
-          })
-          .catch((error) => {
-            console.error("Error during login:", error);
-          });
-      }
+        window.signInWithGoogle = signInWithGoogle;
     </script>
-  </body>
+</head>
+<body>
+    <button onclick="signInWithGoogle()">Sign In with Google</button>
+</body>
 </html>
