--- a/tip-trick.html
+++ b/tip-trick.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/binguswallet.css">
     <link rel="icon" href="Bingus-logo-cropped.jpeg">
+    <script src="scripts/script.js"></script>
     <title>Money-Saving Resources | Bingus Wallet</title>
 </head>
 <body>
