--- a/tip-trick.html
+++ b/tip-trick.html
@@ -24,7 +24,7 @@
         </nav>
     </header>
     <div class="tips-page">
-        <h2>Fun and Affordable Activities to Help You Save and Make Money</h2>
+        <h1>Save and Make</h1>
     </div>
     <div class="tips-container">
         <h2>Money-Saving & Extra Cash Resources</h2>
