--- a/tip-trick.html
+++ b/tip-trick.html
@@ -66,12 +66,17 @@
         });
     </script>
     <footer>
-        Copyright 2025 Bingus Wallet
-
+        <p>Copyright 2025 Bingus Wallet</p>
         <div class="social">
-            <img src="" alt="">
-            <img src="" alt="">
-            <img src="" alt="">
+            <a href="https://facebook.com">
+                <img src="images/facebook.png" alt="facebook icon">
+            </a>
+            <a href="https://instagram.com">
+                <img src="images/instagram.png" alt="instagram icon">
+            </a>
+            <a href="https://x.com">
+                <img src="images/twitter.png" alt="twitter icon">
+            </a>
         </div>
     </footer>
 </body>
