--- a/index.html
+++ b/index.html
@@ -71,13 +71,13 @@
     <footer>
         <p>Copyright 2025 Bingus Wallet</p>
         <div class="social">
-            <a href="https://facebook.com">
+            <a href="https://facebook.com" target="_blank">
                 <img src="images/facebook.png" alt="facebook icon">
             </a>
-            <a href="https://instagram.com">
+            <a href="https://instagram.com" target="_blank">
                 <img src="images/instagram.png" alt="instagram icon">
             </a>
-            <a href="https://x.com">
+            <a href="https://x.com" target="_blank">
                 <img src="images/twitter.png" alt="twitter icon">
             </a>
         </div>
