--- a/tip-trick.html
+++ b/tip-trick.html
@@ -30,23 +30,23 @@
 
         <button class="accordion">💰 Cheap Date Ideas</button>
         <div class="panel">
-            <a href="https://www.byui.edu/calendar/performing-visual-arts">🎥 Free Movie Nights</a>
-            <a href="https://www.tripadvisor.com/Attractions-g35583-Activities-Rexburg_Idaho.html">🌲 Outdoor Adventures</a>
-            <a href="https://www.allrecipes.com/recipe/20171/quick-and-easy-pizza-crust/">🍕 DIY Pizza Night</a>
+            <a href="https://www.byui.edu/calendar/performing-visual-arts" target="_blank">🎥 Free Movie Nights</a>
+            <a href="https://www.tripadvisor.com/Attractions-g35583-Activities-Rexburg_Idaho.html" target="_blank">🌲 Outdoor Adventures</a>
+            <a href="https://www.allrecipes.com/recipe/20171/quick-and-easy-pizza-crust/" target="_blank">🍕 DIY Pizza Night</a>
         </div>
 
         <button class="accordion">💵 Extra Cash Opportunities</button>
         <div class="panel">
-            <a href="https://www.grifolsplasma.com/en/-/rexburg-id">🩸 Donate Plasma for Cash</a>
-            <a href="https://www.swagbucks.com/">📝 Paid Online Surveys</a>
-            <a href="https://www.fiverr.com/">📦 Gig Work & Side Hustles</a>
+            <a href="https://www.grifolsplasma.com/en/-/rexburg-id" target="_blank">🩸 Donate Plasma for Cash</a>
+            <a href="https://www.swagbucks.com/" target="_blank">📝 Paid Online Surveys</a>
+            <a href="https://www.fiverr.com/" target="_blank">📦 Gig Work & Side Hustles</a>
         </div>
 
         <button class="accordion">📈 Money-Saving & Investing</button>
         <div class="panel">
-            <a href="https://money.usnews.com/money/personal-finance/saving-and-budgeting/articles/simple-and-free-budgeting-tools">📊 Best Budgeting Apps</a>
-            <a href="https://www.investopedia.com/articles/basics/11/3-s-simple-investing.asp">📉 How to Start Investing</a>
-            <a href="https://www.nerdwallet.com/article/credit-cards/make-most-rewards-credit-cards">💳 Credit Card Cashback Tips</a>
+            <a href="https://money.usnews.com/money/personal-finance/saving-and-budgeting/articles/simple-and-free-budgeting-tools" target="_blank">📊 Best Budgeting Apps</a>
+            <a href="https://www.investopedia.com/articles/basics/11/3-s-simple-investing.asp" target="_blank">📉 How to Start Investing</a>
+            <a href="https://www.nerdwallet.com/article/credit-cards/make-most-rewards-credit-cards" target="_blank">💳 Credit Card Cashback Tips</a>
         </div>
     </div>
     <script>
@@ -68,13 +68,13 @@
     <footer>
         <p>Copyright 2025 Bingus Wallet</p>
         <div class="social">
-            <a href="https://facebook.com">
+            <a href="https://facebook.com" target="_blank">
                 <img src="images/facebook.png" alt="facebook icon">
             </a>
-            <a href="https://instagram.com">
+            <a href="https://instagram.com" target="_blank">
                 <img src="images/instagram.png" alt="instagram icon">
             </a>
-            <a href="https://x.com">
+            <a href="https://x.com" target="_blank">
                 <img src="images/twitter.png" alt="twitter icon">
             </a>
         </div>
