--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/binguswallet.css">
     <link rel="icon" href="images/Bingus-logo-cropped.jpeg">
-<!--     <script src="scripts/script.js"></script> -->
+    <script src="scripts/script.js"></script>
     <title>Budget & Finance Tracker | Bingus Wallet</title>
     
     <script type="module" defer>
